--- a/style.css
+++ b/style.css
@@ -5,4 +5,10 @@ h1 {
 
 .uppercase {
  text-transform: uppercase;
+}
+
+#article-title{
+  font-family: cursive;
+text-transform: capitalize;
+}
   
